<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">8 Minute Timer</string>
    <string name="about">The 8 minute exercise videos are available on Youtube at the following links:</string>
    <string name="sound">sound</string>
    <string name="keep_awake">keep_awake</string>
    <string name="read_aloud">read_aloud</string>
    <string name="locale">locale</string>
    <string name="abs">8 Minute Abs</string>
    <string name="arms">8 Minute Arms</string>
    <string name="legs">8 Minute Legs</string>
    <string name="buns">8 Minute Buns</string>
    <string name="title_activity_home">8 Minute Timer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next:</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

</resources>
