<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background">
	    <LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" 
	    android:background="@drawable/bg">
	    <TextView
	        android:id="@+id/description"
	        android:text="@string/about"
	        android:textColor="@color/text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:gravity="center">
	    </TextView>
	    <TextView
	        android:id="@+id/absLink"
	        android:text="@string/abs"
	        android:textColor="@color/lighter_text"
	        android:layout_marginTop="8dip"
	        android:layout_marginBottom="8dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:gravity="center">
	    </TextView>
	    <TextView
	        android:id="@+id/armsLink"
	        android:text="@string/arms"
	        android:textColor="@color/lighter_text"
	        android:layout_marginTop="8dip"
	        android:layout_marginBottom="8dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:gravity="center">
	    </TextView>
	    <TextView
	        android:id="@+id/legsLink"
	        android:text="@string/legs"
	        android:textColor="@color/lighter_text"
	        android:layout_marginTop="8dip"
	        android:layout_marginBottom="8dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:gravity="center">
	    </TextView>
	    <TextView
	        android:id="@+id/bunsLink"
	        android:text="@string/buns"
	        android:textColor="@color/lighter_text"
	        android:layout_marginTop="8dip"
	        android:layout_marginBottom="8dip"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:gravity="center">
	    </TextView>
	
	</LinearLayout>
</LinearLayout>